// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepDataset renders errors when input is invalid 1`] = `
Object {
  "component": <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    data-test-subj="createDatasetStep1Header"
    errors={
      Array [
        "A name cannot contain spaces or the characters: \\\\, /, ?, \\", <, >, |",
      ]
    }
    goToNextStep={[Function]}
    isIncludingSystemIndices={false}
    isInputInvalid={true}
    isNextStepDisabled={true}
    onChangeIncludingSystemIndices={[Function]}
    onQueryChanged={[Function]}
    query="?"
  />,
}
`;

exports[`StepDataset renders indices which match the initial query 1`] = `
<IndicesList
  data-test-subj="createDatasetStep1IndicesList"
  indices={
    Array [
      Object {
        "item": Object {},
        "name": "opensearch",
      },
    ]
  }
  query="opensearch-dashboards"
/>
`;

exports[`StepDataset renders matching indices when input is valid 1`] = `
<IndicesList
  data-test-subj="createDatasetStep1IndicesList"
  indices={
    Array [
      Object {
        "item": Object {},
        "name": "opensearch",
      },
    ]
  }
  query="o*"
/>
`;

exports[`StepDataset renders the loading state 1`] = `
<LoadingIndices
  data-test-subj="createDatasetStep1Loading"
/>
`;
